# ffoie

./: .gitignore  CNAME  Cargo.toml  README.md  index.html  run-vulkan.sh
.github/workflows/: deploy-pages.yml
debug/macos-panic/: README.md  panic-base+socd-2026-05-13-143705.000.panic  panic-full-2026-05-13-155906.0002.panic  panic-full-2026-05-13-220817.0002.panic  panic-full-2026-05-13-224145.0002.panic  panic-full-2026-05-14-004542.0002.panic
src/: floor.wgsl  fox.wgsl  main.rs  shader.wgsl  sky.wgsl
