[package]
name = "ffoie"
version = "0.0.1"
edition = "2021"
rust-version = "1.87"
publish = false

[dependencies]
env_logger = "0.11"
pollster = "0.4"
wgpu = "29.0.0"
winit = "0.30.8"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
log = "0.4"
ktx2 = "0.5"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
gltf = { version = "1.4", default-features = false, features = ["import", "utils", "names"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Release profile tuned for actual performance numbers.
# Use this profile when measuring FPS: `cargo run --release`.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
