[package]
name = "ffoie"
version = "0.0.1"
edition = "2021"
rust-version = "1.87"
publish = false

[dependencies]
# Cross-platform deps (native + web).
# `webgl` adds a WebGL2 fallback backend used on the web when WebGPU isn't
# available — e.g. opening the page over a LAN IP (insecure context) where
# Chrome only exposes WebGL2. No effect on native builds.
wgpu = { version = "29.0.0", features = ["webgl"] }
winit = "0.30.8"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
log = "0.4"
ktx2 = "0.5"
egui = "0.34"
egui-wgpu = "0.34"
# default-features disabled to drop `arboard` (clipboard) which doesn't
# build for wasm32 and we don't need anywhere (no text-input UI).
egui-winit = { version = "0.34", default-features = false, features = ["links"] }
gltf = { version = "1.4", default-features = false, features = ["import", "utils", "names"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# `std::time::Instant` panics on wasm32-unknown-unknown. web-time is a drop-in
# replacement that uses performance.now() on web and std::time on native.
web-time = "1"

# Native-only deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster = "0.4"

# Web-only deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }

# Release profile tuned for actual performance numbers.
# Use this profile when measuring FPS: `cargo run --release`.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
